# bitcrackle

./: .cmake-format.py  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  conanfile.py
conan/profiles/: bitcrackle-build-env  bitcrackle-tool-requires  dev-mac  dev-msvc
debug/lldb/: qformat_printers.py
qml/: Colors.qml  Main.qml  Sizing.qml
qml/Bitcrackle/: Colors.qml  Main.qml  Sizing.qml
src/: CMakeLists.txt  device_change_event_filter.cpp  device_change_event_filter.h  main.cpp  midi_device_model.cpp  midi_device_model.h  qml_hotreload.cpp  qml_hotreload.h  qml_url_interceptor.cpp  qml_url_interceptor.h  utilities.ixx
src/audio_engine/: CMakeLists.txt
src/audio_engine/include/audio_engine/: ring_buffer.h
src/audio_engine/tests/: CMakeLists.txt  ring_buffer_test.cpp
src/math/: CMakeLists.txt
src/math/include/math/: bits.h  qnumber.h  statistics.h  utilities.h  waves.h
src/math/include/math/qnumber/: round.h
src/math/tests/: CMakeLists.txt  add_test.cpp  divide_test.cpp  multiply_test.cpp  sine_test.cpp  statistics_test.cpp  subtract_test.cpp
src/peep/: CMakeLists.txt
src/peep/include/peep/: peeper.h
src/peep/src/: peeper.cpp
src/wave/: CMakeLists.txt
src/wave/include/wave/: header.hpp  reader.hpp  writer.hpp
src/wave/src/: reader.cpp  writer.cpp
test_package/: conanfile.py
tests/: compute_sine_test.cpp
